Add Javadoc to JVM annotations